# learning-rust

./: .gitignore  Cargo.toml  README.md
cookbook/: Cargo.toml
cookbook/src/: concurrency.rs  data_structure.rs  error_handling.rs  filesystem.rs  macros.rs  operating_system.rs
cookbook/src/compression/: tarball.rs
cookbook/src/concurrency/: draw_fractal_threadpool.rs  global_mutable_state.rs  julia.rs  par_array.rs  parallel_pipeline.rs  send_data_between_threads.rs  short_live_thread.rs
cookbook/src/cryptography/: encryption.rs  hashing.rs
cookbook/src/data_structure/: bitfield.rs
cookbook/src/database/: sqlite.rs
cookbook/src/encoding/: character_set.rs
cookbook/src/error_handling/: avoid_discarding.rs  error_backtrace.rs
cookbook/src/filesystem/: memmap_acc.rs  traverse.rs
cookbook/src/operating_system/: external_command.rs
sahw2/: Cargo.toml  README.md
sahw2/src/: lib.rs  main.rs
sahw4/: Cargo.toml  README.md
sahw4/bins/: area.rs  stoplights.rs  sum.rs
sahw4/src/: lib.rs
sahw4/src/area/: mod.rs
sahw4/src/stoplights/: mod.rs
sahw4/src/sum/: mod.rs
src/: compression.rs  concurrency.rs  cryptography.rs  develop_tools.rs  encoding.rs  filesystem.rs  lib.rs
src/concurrency/: global_mutable_state.rs  julia.rs  map_reduce.rs  par_array.rs  sha256sum.rs  sha256sum_threadpool.rs  thumbnails.rs
src/cryptography/: encryption.rs  hashing.rs
src/data_structure/: bitfield.rs
src/database/: sqlite.rs
src/encoding/: csv_proccess.rs  structured_data.rs
src/error_handling/: avoid_discarding.rs  error_backtrace.rs  error_in_main.rs
src/filesystem/: my_same_file.rs  read_file.rs  traverse.rs
src/logging/: mod.rs
