[package]
name = "learning-rust"
version = "0.1.0"
authors = ["simonjiao <simon_jiaoh@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
crossbeam-channel = "0.5"
lazy_static = "1.4"
threadpool = "1.8"
num_cpus = "1.13"
walkdir = "2.3"
ring = "0.16"
