[package]
name = "learning-rust"
version = "0.1.0"
authors = ["simonjiao <simon_jiaoh@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
crossbeam-channel = "0.5"
lazy_static = "1.4"
threadpool = "1.8"
num_cpus = "1.13"
walkdir = "2.3"
ring = "0.16"
num = "0.4"
image = "0.23"
error-chain = "0.12"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "blocking"] }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
rayon = "1.5"
rand = "0.8"
glob = "0.3"
same-file = "1.0"
memmap = "0.7"
syslog = "5.0.0"
flate2 = "1.0"
tar = "0.4"
data-encoding = "2.3.2"
bitflags = "1.2.1"
percent-encoding = "2.1.0"
url = "2.2.1"
base64 = "0.13.0"
regex = "1.5.4"
anyhow = "1.0"
toml = "0.5.8"
byteorder = "1.4.3"
log = { version = "0.4.16", features = ["std", "serde"] }
env_logger = "0.9.0"

[dependencies.rusqlite]
version = "0.25.1"
features = ["bundled"]